[Password Manager] Fix clipping of username value in a save prompt (Win)

In case of long username, the beginning of value should be visible.

Bug: 770055
Change-Id: I09423d0131e7198de69211a020e38eaff2b7c503